hphp/hack/test/typecheck/stdclass_static_members.php.exp
File "stdclass_static_members.php", line 4, characters 13-23:
Could not find class variable $staticProp in type stdClass (Typing[4090])
File "hhi_lib__srcs/classes.hhi", line 188, characters 13-20:
Declaration of stdClass is here
